...
                  ),
                  child: Container(
                    width: 90.0,
                    height: 50.0,
                    alignment: Alignment.center,
                    child: Text(
                      'Log In',
                      style: TextStyle(
                        fontWeight: FontWeight.bold,
                        fontSize: 28.0,
                        color: Colors.black, // Culoarea textului
                      ),
                    ),
...
